--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,54 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 attrs==24.3.0
 blinker==1.7.0
 Brotli==1.1.0
 certifi==2024.12.14
 cffi==1.17.1
+charset-normalizer==3.4.1
 cryptography==44.0.0
+frozenlist==1.5.0
+greenlet==3.1.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 hyperframe==6.0.1
 idna==3.10
 kaitaistruct==0.10
+multidict==6.1.0
+mysql==0.0.3
+mysql-connector==2.2.9
+mysqlclient==2.2.7
+numpy==2.2.1
 outcome==1.3.0.post0
 packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+propcache==0.2.1
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 pyOpenSSL==24.3.0
 pyparsing==3.2.1
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
 redis==5.2.1
+requests==2.32.3
 selenium==4.27.1
 selenium-wire==5.1.0
 setuptools==75.6.0
+six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+SQLAlchemy==2.0.36
 trio==0.28.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
 websocket-client==1.8.0
 wsproto==1.2.0
+yarl==1.18.3
 zstandard==0.23.0
-
-SQLAlchemy~=2.0.36
